<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding_gradient_3">

    <!-- Image -->
    <ImageView
        android:id="@+id/onboarding_image_3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/img3"
        android:src="@drawable/onboarding_image_3"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/white_section"
        android:layout_marginBottom="32dp"/>


    <!-- White Section -->
    <View
        android:id="@+id/white_section"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.40"/>

    <!-- Title -->
    <TextView
        android:id="@+id/title_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onboard_title3"
        android:textColor="@color/textColour"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/white_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="75dp"
        android:layout_marginHorizontal="6dp"
        android:gravity="center"/>

    <!-- Description -->
    <TextView
        android:id="@+id/description_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onboard_des3"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/title_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="50dp"
        android:gravity="center"/>

    <!-- Get Started Button -->
    <Button
        android:id="@+id/get_started_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:backgroundTint="@color/accentColor"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="75dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>